--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <div class="background">
-            <img class="back-static" id="back1" src="/src/img/back_1.png">
-            <img class="back-static" id="back2" src="/src/img/back_2.png">
-            <img class="back-moveable" id="backMoveable1" src="/src/img/moveable_1.png">
-            <img class="back-moveable" id="backMoveable2" src="/src/img/moveable_2.png">
+            <img class="back-static" id="back1" src="./src/img/back_1.png">
+            <img class="back-static" id="back2" src="./src/img/back_2.png">
+            <img class="back-moveable" id="backMoveable1" src="./src/img/moveable_1.png">
+            <img class="back-moveable" id="backMoveable2" src="./src/img/moveable_2.png">
         </div>
     </body>
 </html>
