--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./src/css/style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Poppins:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
         <script defer src="./src/script/script.js"></script>
     </head>
     <body>
@@ -13,5 +13,40 @@
             <img class="back-moveable" id="backMoveable1" src="./src/img/moveable_1.png">
             <img class="back-moveable" id="backMoveable2" src="./src/img/moveable_2.png">
         </div>
+        <div class="content">
+            <a class="logo">
+                <img src="src/img/logo.svg">
+            </a>
+            <article>
+                <h1 class="main-title poppins t-center mrg-t-h f-bold">Find out how much weight<br>you'll lose with our</h1>
+                <p class="main-title poppins t-center mrg-t-l f-light italic">Easy <span class="color-1">Keto Meal Plan</span></p>
+                <span class="sub-title montserrat t-center mrg-t-h f-bold color-2 arrow-down">Select your gender</span>
+                <div class="gender-choose mrg-t-h">
+                    <div class="gender-icon female">
+                        <div>
+                            <div class="gender">
+                                <img src="./src/img/female-icon.svg">
+                                <span class="montserrat f-medium color-3">Female</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="gender-icon male">
+                        <div>
+                            <div class="gender">
+                                <img src="./src/img/male-icon.svg">
+                                <span class="montserrat f-medium color-3">male</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </div>
+        <footer>
+            <p class="footer-text montserrat f-normal color-4 t-center">
+                *Results vary depending on your starting point, goals, and effort.<br>
+                The average participant can expect to lose 1-2 lbs/week.<br><br>
+                © 2020 KetoX. All rights reserved.
+            </p>
+        </footer>
     </body>
 </html>
