--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <article>
                 <h1 class="main-title poppins t-center mrg-t-h f-bold">Find out how much weight<br>you'll lose with our</h1>
                 <p class="main-title poppins t-center mrg-t-l f-light italic">Easy <span class="color-1">Keto Meal Plan</span></p>
-                <span class="sub-title montserrat t-center mrg-t-h f-bold color-2 arrow-down">Select your gender</span>
+                <span class="sub-title montserrat t-center mrg-t-h f-bold color-2 arrow-down">SELECT YOUR GENDER</span>
                 <div class="gender-choose mrg-t-h">
                     <div class="gender-icon female">
                         <div>
