--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
                     </div>
                 </div>
             </article>
+            
+            <div class="status-bar-container montserrat mrg-t-h f-bold color-3">
+                <button class="montserrat f-semibold t-center color-0">&#8592 Back</button>
+                <ul class="status-bar f-light color-4">
+                    <li class="active"></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+                <button class="montserrat f-semibold t-center color-0">Help</button>
+            </div>
         </div>
         <footer>
             <p class="footer-text montserrat f-normal color-4 t-center">
